# hipsdb

./: .git-blame-ignore-revs  .gitignore  README.md  flake.nix  manage.py  pyproject.toml  requirements.txt
hips/: asgi.py  settings.py  urls.py  wsgi.py
hips_etl/: __init__.py  __main__.py  logging.py  types.py  utils.py  validation.py
hips_etl/fields/: common.json  meta_only.json  nucleus_fields.json  props_only.json  types.json
hips_etl/scripts/: README.md  generate_nucleus_fields.py  generate_nucleus_model.py
hips_etl/test_data/broken_checks/nucleiMeta/: broken_checks_roi-5_left-18001_top-45779_right-20049_bottom-47827.csv
hips_etl/test_data/broken_checks/nucleiProps/: broken_checks_roi-5_left-18001_top-45779_right-20049_bottom-47827.csv
hips_etl/test_data/duplicate_objectcodes_meta/nucleiMeta/: duplicate_objectcodes_meta_roi-5_left-18001_top-45779_right-20049_bottom-47827.csv
hips_etl/test_data/duplicate_objectcodes_props/nucleiProps/: duplicate_objectcodes_props_roi-5_left-18001_top-45779_right-20049_bottom-47827.csv
hips_etl/test_data/mismatched_name/nucleiMeta/: wrong_name_roi-5_left-18001_top-45779_right-20049_bottom-47827.csv
hips_etl/tests/: test_validate_hips_dir.py
hips_etl/utils/: __init__.py  helpers.py  types.py  validation.py
hipsdb/: apps.py  asgi.py  models.py  settings.py  urls.py  views.py  wsgi.py
hipsdb/management/commands/: delete.py  ingest.py  list.py
hipsdb/migrations/: 0001_initial.py  0002_image_created_at.py  0003_alter_image_name.py
(+5 files in other folders)
